tests/machine/x/go/group_by_left_join.error
run error: exit status 1
# command-line-arguments
tests/machine/x/go/group_by_left_join.go:12:17: undefined: CustomersItem
tests/machine/x/go/group_by_left_join.go:15:5: undefined: CustomersItem
tests/machine/x/go/group_by_left_join.go:18:5: undefined: CustomersItem
tests/machine/x/go/group_by_left_join.go:22:14: undefined: OrdersItem
tests/machine/x/go/group_by_left_join.go:25:5: undefined: OrdersItem
tests/machine/x/go/group_by_left_join.go:28:5: undefined: OrdersItem
tests/machine/x/go/group_by_left_join.go:33:20: undefined: Stats
tests/machine/x/go/group_by_left_join.go:61:11: undefined: OrdersItem
tests/machine/x/go/group_by_left_join.go:84:16: undefined: Stats
tests/machine/x/go/group_by_left_join.go:86:30: undefined: Stats
tests/machine/x/go/group_by_left_join.go:86:30: too many errors
